# fheml

./: .gitignore  README.md  TRAINING_INVESTIGATION.md  __init__.py  advanced_fhe_utils.py  bootstrapping_fhe.py  fhe_approximations.py  inference.py  main.py  main_clean.py  main_production.py  memory_manager.py  model.py  monitor_training.sh  production_inference.py  production_training.py  pyproject.toml  run_training.sh  training.py  utils.py
instructions/: CLAUDE_RESTART_INSTRUCTIONS.md  CONSERVATIVE_TRAINING_CONFIG.md  FINAL_TRAINING_REPORT.md  FULL_TRAINING_CONFIG.md  OPTIMIZED_TRAINING_CONFIG.md  PRODUCTION_USAGE_GUIDE.md  ULTIMATE_TRAINING_README.md
src/fheml/: __init__.py
src/fheml/core/: __init__.py  context.py  encryption.py  operations.py
src/fheml/models/: __init__.py  activations.py  classifier.py  layers.py
src/fheml/training/: __init__.py  checkpoints.py  memory.py  trainer.py
src/fheml/utils/: __init__.py  data.py  logging.py  metrics.py
tests/: __init__.py  test_basic.py  test_inference.py  test_model.py  test_training.py  test_utils.py
tests/integration/: __init__.py  test_simple_integration.py  test_training_pipeline.py
tests/unit/: __init__.py  test_context.py  test_encryption.py  test_layers.py
