[project]
name = "fheml"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ondrej Zoder", email = "ondrej.zoder@uipath.com"},
]
dependencies = [
    "tenseal>=0.3.16",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.1",
    "matplotlib>=3.10.5",
    "tqdm>=4.67.1",
    "psutil>=7.1.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
train = {env = {PYTHONPATH = "."}, cmd = "python main.py"}
train-production = {env = {PYTHONPATH = "."}, cmd = "python main_production.py"}
demo-bootstrapping = {env = {PYTHONPATH = "."}, cmd = "python bootstrapping_fhe.py"}
test = {env = {PYTHONPATH = "."}, cmd = "python -m pytest tests/"}
test-basic = {env = {PYTHONPATH = "."}, cmd = "python tests/test_basic.py"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "mypy>=1.18.2",
    "ruff>=0.13.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.ruff]
target-version = "py310"
line-length = 88
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "PT", # flake8-pytest-style
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N802", "N803"]  # Allow test function names
